# careful-resume-netem

./: .dockerignore  .gitattributes  .gitignore  build.sh  main.py  plot.py  plot_rates.py  requirements.txt  tests.yaml
containers/: Dockerfile.client  Dockerfile.server  pause.c
containers/client/: Cargo.toml
containers/client/src/: main.rs
containers/server/: Cargo.toml
containers/server/src/: main.rs
templates/: report.tex
