[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.33.0", features = ["net", "macros", "rt-multi-thread", "time", "sync", "fs", "io-util"] }
quiche-tokio = { git = "https://github.com/theenbyperor/quiver", rev = "100ea730c61eeccb45e25b3d7b3834f8b4a2b928" }
quiver-h3 = { git = "https://github.com/theenbyperor/quiver", rev = "100ea730c61eeccb45e25b3d7b3834f8b4a2b928" }
quiver-bdp-tokens = { git = "https://github.com/theenbyperor/quiver", rev = "100ea730c61eeccb45e25b3d7b3834f8b4a2b928" }
quiche = { git = "https://github.com/theenbyperor/quiche", rev = "0cc64c99b6d18b0b5e5f292a9ff77bfdb0bc63b3" }
chrono = "0"
hex = "0.4.3"
